--- a/src/AMT-Webapp-Login/src/main/webapp/WEB-INF/web.xml
+++ b/src/AMT-Webapp-Login/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <filter>
-        <filter-name>MainFilter</filter-name>
-        <filter-class>com.heig.amt.webapp.web.MainFilter</filter-class>
+        <filter-name>AuthFillter</filter-name>
+        <filter-class>com.heig.amt.webapp.web.AuthFillter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>MainFilter</filter-name>
+        <filter-name>AuthFillter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <servlet>
@@ -13,8 +13,8 @@
         <servlet-class>com.heig.amt.webapp.web.IndexServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>Private</servlet-name>
-        <servlet-class>com.heig.amt.webapp.web.PrivateServlet</servlet-class>
+        <servlet-name>Users</servlet-name>
+        <servlet-class>com.heig.amt.webapp.web.UsersServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>Login</servlet-name>
@@ -25,7 +25,7 @@
         <servlet-class>com.heig.amt.webapp.web.RegisterServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-name>Logout</servlet-name>
         <servlet-class>com.heig.amt.webapp.web.LogoutServlet</servlet-class>
     </servlet>
     <servlet-mapping>
@@ -33,8 +33,8 @@
         <url-pattern>/Index</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>Private</servlet-name>
-        <url-pattern>/Private</url-pattern>
+        <servlet-name>Users</servlet-name>
+        <url-pattern>/Users</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
@@ -45,7 +45,7 @@
         <url-pattern>/Register</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-name>Logout</servlet-name>
         <url-pattern>/Logout</url-pattern>
     </servlet-mapping>
     <session-config>
